--- a/ExcelDataSerializer/ExcelDataSerializer.csproj
+++ b/ExcelDataSerializer/ExcelDataSerializer.csproj
@@ -9,7 +9,9 @@
   <ItemGroup>
     <PackageReference Include="ClosedXML" Version="0.104.0-preview2" />
     <PackageReference Include="MemoryPack" Version="1.21.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.10.0-2.final" />
     <PackageReference Include="System.CodeDom" Version="9.0.0-preview.2.24128.5" />
+    <PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
   </ItemGroup>
 
   <ItemGroup>
