--- a/ExcelDataSerializer/ExcelDataSerializer.csproj
+++ b/ExcelDataSerializer/ExcelDataSerializer.csproj
@@ -1,22 +1,24 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <LangVersion>11</LangVersion>
+    <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="ClosedXML" Version="0.104.0-preview2" />
     <PackageReference Include="MemoryPack" Version="1.21.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.10.0-2.final" />
+    <PackageReference Include="Microsoft.CSharp" Version="4.0.1" />
     <PackageReference Include="System.CodeDom" Version="9.0.0-preview.2.24128.5" />
     <PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="ClassGenerator\" />
-    <Folder Include="DataParser\" />
+    <ProjectReference Include="..\ExcelDataSerializer.CodeGen\ExcelDataSerializer.CodeGen.csproj" 
+                      OutputItemType="Analyzer" 
+                      />
   </ItemGroup>
-
 </Project>
