--- a/ExcelDataSerializerConsole/ExcelDataSerializerConsole.csproj
+++ b/ExcelDataSerializerConsole/ExcelDataSerializerConsole.csproj
@@ -17,4 +17,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+	<ItemGroup>
+		<ProjectReference Include="..\ExcelDataSerializer.CodeGen\ExcelDataSerializer.CodeGen.csproj"
+				  OutputItemType="Analyzer"
+				  ReferenceOutputAssembly="false"/>
+	</ItemGroup>
 </Project>
