--- a/ExcelDataSerializer/ExcelDataSerializer.csproj
+++ b/ExcelDataSerializer/ExcelDataSerializer.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="MemoryPack" Version="1.21.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.10.0-2.final" />
     <PackageReference Include="Microsoft.CSharp" Version="4.0.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="System.CodeDom" Version="9.0.0-preview.2.24128.5" />
     <PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
   </ItemGroup>
