--- a/ExcelDataSerializerConsole/ExcelDataSerializerConsole.csproj
+++ b/ExcelDataSerializerConsole/ExcelDataSerializerConsole.csproj
@@ -18,8 +18,6 @@
   </PropertyGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\ExcelDataSerializer.CodeGen\ExcelDataSerializer.CodeGen.csproj"
-				  OutputItemType="Analyzer"
-				  ReferenceOutputAssembly="false"/>
+		<ProjectReference Include="..\ExcelDataSerializer.CodeGen\ExcelDataSerializer.CodeGen.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
 	</ItemGroup>
 </Project>
