--- a/ExcelDataSerializerUI/ExcelDataSerializerUI.csproj
+++ b/ExcelDataSerializerUI/ExcelDataSerializerUI.csproj
@@ -20,6 +20,7 @@
         <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
         <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.10"/>
         <PackageReference Include="Avalonia.ReactiveUI" Version="11.0.10"/>
+        <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.9.2" />
     </ItemGroup>
 
     <ItemGroup>
