--- a/ExcelDataSerializer/ExcelDataSerializer.csproj
+++ b/ExcelDataSerializer/ExcelDataSerializer.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
     <LangVersion>11</LangVersion>
     <TargetFramework>netstandard2.1</TargetFramework>
+    <AssemblyVersion>0.1.0</AssemblyVersion>
   </PropertyGroup>
 
   <ItemGroup>
