--- a/ExcelDataSerializer/ExcelDataSerializer.csproj
+++ b/ExcelDataSerializer/ExcelDataSerializer.csproj
@@ -5,7 +5,7 @@
     <Nullable>enable</Nullable>
     <LangVersion>11</LangVersion>
     <TargetFramework>netstandard2.1</TargetFramework>
-    <AssemblyVersion>0.1.2</AssemblyVersion>
+    <AssemblyVersion>0.1.3</AssemblyVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -16,5 +16,6 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="System.CodeDom" Version="9.0.0-preview.2.24128.5" />
     <PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
+    <PackageReference Include="UniTask" Version="2.5.4" />
   </ItemGroup>
 </Project>
