MessagePack 연동 작업중

--- a/ExcelDataSerializerUI/ExcelDataSerializerUI.csproj
+++ b/ExcelDataSerializerUI/ExcelDataSerializerUI.csproj
@@ -26,5 +26,8 @@
 
     <ItemGroup>
       <ProjectReference Include="..\ExcelDataSerializer\ExcelDataSerializer.csproj" />
+      <None Update="External/netstandard.dll">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 </Project>
